Fix endTime picker not showing reservation button

--- a/src-styles/pages/_single-space.sass
+++ b/src-styles/pages/_single-space.sass
@@ -27,7 +27,8 @@ body.single-space
 				margin-top: 8px
 				font-size: 0.8em
 	#row-2
-		width: 540px
+		width: 100%
+		max-width: 540px
 		.card
 			margin-bottom: $gap-size-20
 
